# jellyburn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
flatpak/: de.pixelsandmore.Jellyburn.desktop  de.pixelsandmore.Jellyburn.metainfo.xml  de.pixelsandmore.Jellyburn.yml  io.github.oemerhamzaoglu.Jellyburn.desktop  io.github.oemerhamzaoglu.Jellyburn.metainfo.xml  io.github.oemerhamzaoglu.Jellyburn.yml
jellyburn/: __main__.py  api.py  burner.py  config.py  i18n.py  player.py  playlists.py  util.py
jellyburn/data/: jellyburn.desktop
jellyburn/locales/de/LC_MESSAGES/: jellyburn.mo  jellyburn.po
jellyburn/ui/: burn_dialog.py  dialogs.py  equalizer.py  library_pane.py  main_window.py  mini_player.py  now_playing.py  playlist_pane.py  settings_dialog.py  style.py
