[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyburn"
version = "0.3.0"
description = "A GTK music player for Jellyfin with CD burning support"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ömer Hamzaoğlu" }]
keywords = ["jellyfin", "music", "cd", "burning", "gtk", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/oemerhamzaoglu/jellyburn"
Issues = "https://github.com/oemerhamzaoglu/jellyburn/issues"

[project.scripts]
jellyburn = "jellyburn.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jellyburn*"]

[tool.setuptools.package-data]
jellyburn = ["icons/*.svg", "locales/*/LC_MESSAGES/*.mo", "locales/*/LC_MESSAGES/*.po"]
