[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellyburn"
version = "0.4.1"
description = "A GTK music player for Jellyfin with CD burning support"
readme = "README.md"
license = "MIT"
authors = [{ name = "Pixels and More", email = "hallo@pixelsandmore.de" }]
keywords = ["jellyfin", "music", "cd", "burning", "gtk", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/pixels-more/jellyburn"
Issues = "https://github.com/pixels-more/jellyburn/issues"

[project.scripts]
jellyburn = "jellyburn.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jellyburn*"]

[tool.setuptools.package-data]
jellyburn = ["icons/*.svg", "locales/*/LC_MESSAGES/*.mo", "locales/*/LC_MESSAGES/*.po"]

[tool.black]
target-version = ["py310"]

[tool.ruff.lint]
# E402: PyGObject requires gi.require_version(...) to run before the
# matching `from gi.repository import ...` line, which is unavoidably
# not "top of file" - this is the correct, required pattern, not a bug.
ignore = ["E402"]
